# Katerina-Engine

./: CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yml
DbgAlice/: CMakeLists.txt  dbg_alice_main.cpp
DbgKatEngine/: dbg_alice_main.cpp
DconGenerator/: CMakeLists.txt  DataContainerGenerator.cpp  code_fragments.cpp  object_member_fragments.cpp  parsing.hpp  query_fragments.cpp
Launcher/: CMakeLists.txt
ParserGenerator/: CMakeLists.txt  parser_generator.cpp
SaveEditor/: CMakeLists.txt  save_editor_main.cpp
assets/: alice.gfx  alice.gui  alice_menubar.gui  game_rules.txt  imp_border.dds  nat_border.dds  prov_border.dds  shoreline.dds  state_border.dds
assets/shaders/: line_unit_arrow_f.glsl  line_unit_arrow_v.glsl  map_close_f.glsl  map_far2_f.glsl  map_far_f.glsl  model3d_f.glsl  model3d_v.glsl  msaa_f_shader.glsl  screen_v.glsl  selection_f.glsl  selection_v.glsl  text_line_f.glsl  text_line_v.glsl  text_ttf_line_f.glsl  textured_line_b_f.glsl  textured_line_b_v.glsl  textured_line_f.glsl  textured_line_v.glsl  ui_f_shader.glsl
dependencies/: CMakeLists.txt
dependencies/DataContainerGenerator/: CMakeLists.txt
dependencies/catch2/: CMakeLists.txt
dependencies/freetype/: CMakeLists.txt
dependencies/glew/: CMakeLists.txt
dependencies/icu/: CMakeLists.txt
dependencies/tbb/: CMakeLists.txt
docs/: Doxyfile  about.md  accessing_data.md  contributing.md  documentation.md  extensions.md  file_system_wrapper.md  generate_docs_post.sh  project_alice_modders_suggestions.md  rules.md  save_file_formats.md  scripting.md  scripting_extensions.md  tags_and_flags.md  text_data.md  triggers.md  ui_design.md  user_guide.md
docs/de-de/: about.md  contributing.md  user_guide_de.md
docs/devlogs/: devlogs.md
docs/es-es/: about.md  contributing.md  extensions_es.md  file_system_wrapper_es.md  guia_usuario.md
docs/map-upgrade-tutorial/: map-upgrade-tutorial.md
docs/pt/: about.md  contributing.md
docs/zh-cn/: about.md
src/: KatEngine.desktop  KatEngine.rc  alice.desktop  entry_point.cpp  entry_point_nix.cpp  entry_point_win.cpp  main.cpp  platform_specific.cpp  resource.h
src/ai/: ai.cpp  ai.hpp  ai_templates.hpp
src/common_types/: blake2.cpp  common_types.cpp  common_types.hpp  constants.hpp  container_types.hpp  cyto_any.hpp  date_interface.cpp  date_interface.hpp  fake_tbb.h  math_fns.hpp  message_types.hpp  native_types_nix.hpp  native_types_win.hpp  pdqsort.h  prng.cpp  prng.hpp  reports.cpp  reports.hpp  ve.hpp  ve_avx.hpp  ve_avx2.hpp  ve_avx512.hpp  ve_neon.hpp  ve_rvv.hpp  ve_sse.hpp  ve_sse3.hpp
src/culture/: culture.cpp  culture.hpp  politics.cpp  politics.hpp  rebels.cpp  rebels.hpp
src/economy/: demographics.cpp  demographics.hpp  economy.cpp  economy.hpp  economy_estimations.cpp  economy_estimations.hpp  economy_factory.cpp  economy_factory.hpp  economy_factory_templates.hpp  economy_rgo.cpp  economy_rgo.hpp  economy_templates.hpp  factory.cpp  factory.hpp  factory_templates.hpp
src/filesystem/: simple_fs.hpp  simple_fs_nix.cpp  simple_fs_types_nix.hpp  simple_fs_types_win.hpp  simple_fs_win.cpp
src/gamestate/: cheats.cpp  cheats.hpp  commands.cpp  commands.hpp  dcon_generated.txt  diplomatic_messages.cpp  diplomatic_messages.hpp  game_scene.cpp  game_scene.hpp  modifiers.cpp  modifiers.hpp  notifications.cpp  notifications.hpp  serialization.cpp  serialization.hpp  system_state.cpp  system_state.hpp
src/graphics/: color.cpp  color.hpp  glad.c  glad.cpp  glad.h  opengl_wrapper.cpp  opengl_wrapper.hpp  opengl_wrapper_nix.cpp  opengl_wrapper_win.cpp  stb_image.cpp  stb_image_write.cpp  stb_image_write.h  texture.cpp  texture.hpp  xac.cpp  xac.hpp
src/gui/: gui_chat_window.hpp  gui_common_elements.cpp  gui_common_elements.hpp  gui_console.cpp  gui_console.hpp  gui_diplomacy_request_topbar.cpp  gui_diplomacy_request_topbar.hpp  gui_diplomacy_request_window.hpp  gui_effect_tooltips.cpp  gui_effect_tooltips.hpp  gui_element_base.hpp  gui_element_templates.hpp  gui_element_types.cpp  gui_element_types.hpp  gui_end_window.hpp  gui_error_window.cpp  gui_error_window.hpp  gui_event.cpp  gui_event.hpp  gui_fps_counter.hpp  gui_graphics.cpp  gui_graphics.hpp  gui_land_combat.hpp  gui_leader_select.cpp  gui_leader_select.hpp  gui_leader_tooltip.cpp  gui_leader_tooltip.hpp  gui_ledger_window.hpp  gui_main_menu.cpp  gui_main_menu.hpp  gui_map_icons.hpp  gui_map_legend.hpp  gui_message_filters_window.hpp  gui_message_settings_window.cpp  gui_message_settings_window.hpp  gui_message_window.cpp  gui_message_window.hpp  gui_minimap.hpp  gui_modifier_tooltips.cpp  gui_modifier_tooltips.hpp  (+20 more)
src/launcher/: launcher_main.cpp
src/map/: map.cpp  map.hpp  map_borders.cpp  map_data_loading.cpp  map_modes.cpp  map_modes.hpp  map_state.cpp  map_state.hpp
src/military/: military.cpp  military.hpp  military_cb.cpp  military_templates.hpp  military_units.cpp  military_wars.cpp
src/nations/: nations.cpp  nations.hpp  nations_templates.hpp
src/network/: network.cpp  network.hpp  network_nix.cpp  network_win.cpp  pcp.cpp  pcp_logger.c
src/news/: news.cpp  news.hpp
src/parsing/: cultures_parsing.cpp  defines.cpp  defines.hpp  econ_parsing.cpp  effect_parser_defs.txt  effect_parsing.cpp  effect_parsing.hpp  float_from_chars.cpp  game_rules_parser_defs.txt  game_rules_parsing.cpp  game_rules_parsing.hpp  gui_graphics_parsers.cpp  gui_parser_defs.txt  military_parsing.cpp  nations_parsing.cpp  news_parser_defs.txt  news_parsing.cpp  news_parsing.hpp  parser_defs.txt  parsers.cpp  parsers.hpp  parsers_declarations.cpp  parsers_declarations.hpp  provinces_parsing.cpp  save_parser_defs.txt  save_parsing.cpp  save_parsing.hpp  trigger_bytecodes_defs.txt  trigger_parser_defs.txt  trigger_parsing.cpp  trigger_parsing.hpp
tests/: CMakeLists.txt  dcon_tests.cpp  defines_tests.cpp  determinism_tests.cpp  file_system_tests.cpp  gui_graphics_parsing_tests.cpp  misc_tests.cpp  parsers_tests.cpp  scenario_building.cpp  test_bench.cpp  test_main.cpp  test_simdify.cpp  test_simdify_demo.cpp  text_tests.cpp  triggers_tests.cpp  ve_tests.cpp
(+176 files in other folders)
