if(ARCHITECTURE STREQUAL "x64" OR ARCHITECTURE STREQUAL "x86")
	project (ParserGenerator LANGUAGES CXX)
	set(CMAKE_CXX_STANDARD 20 CACHE STRING "The C++ standard to use")
	set(CMAKE_CXX_STANDARD_REQUIRED ON)
	add_executable(ParserGenerator "parser_generator.cpp")
	export(TARGETS ParserGenerator FILE "${CMAKE_CURRENT_BINARY_DIR}/ParserGeneratorTargets.cmake")
else()
	set(IMPORT_PATH "IMPORTFILE-NOTFOUND" CACHE FILEPATH "Point it to the export file path from a native build")
	file(TO_CMAKE_PATH "${IMPORT_PATH}" IMPORT_PATH_CMAKE)
	include(${IMPORT_PATH_CMAKE}/ParserGenerator/ParserGeneratorTargets.cmake)
endif()
